--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         <div>
                           <i class="fas fa-mobile-alt"></i>
                         </div>
-                        <div>
+                        <div style="width: 70%;">
                           <span class="animate animation loading">Điện Thoại</span>
                     <p class="animate animation loading">+84343661688</p>
                 </div>
@@ -338,7 +338,7 @@
                     <div>
                         <i class="fas fa-envelope"></i>
                     </div>
-                    <div>
+                    <div style="width: 70%;">
                         <span class="animate animation loading">EMail</span>
                         <br />
                         <p class="animate animation loading">
@@ -351,7 +351,7 @@
                     <div>
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
-                    <div>
+                    <div style="width: 70%;">
                         <span class="animate animation loading">Vị Trí</span>
                         <br />
                         <p class="animate animation loading">
