--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                     <div>
                         <a href="https://www.facebook.com/huynh.trongnhat"><i class="fab fa-facebook-f"></i
                         ></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/huynhtrongnhat/?hl=vi"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/HuynhTrongNhat"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 <div class="contact-right__bottom">
